--- a/help-me-out/app/distribute-services/distribute-services.template.html
+++ b/help-me-out/app/distribute-services/distribute-services.template.html
@@ -1,9 +1,46 @@
-
 <nav-bar></nav-bar>
 <div class="row">
     <div class="col-xs-12">
         <div class="container-fluid">
-            <h2>TODO: Create module 'Distribute Services'</h2>
+            <div class="panel">
+                <div style="padding: 10px">
+                    <label style="color: #1a1a1a">You contact information:
+                        <input id="message-input" style="color: #1a1a1a" type="text" name="input" ng-model="messageText">
+                    </label>
+                    <!--<h2 ng-model="messageText"></h2>-->
+                </div>
+            </div>
+            <div ng-repeat="service in $ctrl.servicesArray">
+                <div class="panel">
+                    <div style="padding: 10px">
+                        <h2><b>Service Name: {{service.name}}</b></h2>
+                        <h3>Requests:</h3>
+                    </div>
+                </div>
+                <div>
+                    <!--<label>-->
+                    <!--Order by:-->
+                    <!--<select ng-model="orderProp" ng-options="prop for prop in ['id', 'name']"></select>-->
+                    <!--</label>-->
+                    <!--<div ng-repeat="item in arrFromMyObj | toArray:false | orderBy:orderProp">-->
+                    <!--[{{ item.id }}] {{ item.name }}-->
+                    <!--</div>-->
+
+                    <div ng-repeat="request in service.requests">
+                        <div class="panel">
+                            <div style="padding: 10px">
+                                <!--{{request}}-->
+                                <h4>Requester Name: {{request.requesterName}}</h4>
+                                <h4>Time of Request: {{request.dateTimeText}}</h4>
+                                <h4>Request Priority: {{request.priority}}</h4>
+                                <a class="btn btn-info"
+                                   ng-click="$ctrl.fulfilRequest(service.name, request)">Fulfil
+                                    Request</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
