--- a/help-me-out/app/nav-bar/nav-bar.template.html
+++ b/help-me-out/app/nav-bar/nav-bar.template.html
@@ -15,7 +15,7 @@
 
                 <li data-ng-class="{'active': $ctrl.requestAService, 'current-tab': $ctrl.requestAService, 'nav-bar-fade-on-hover': !$ctrl.requestAService}"><a href="/request-a-service">Request a Service</a></li>
                 <li data-ng-class="{'active': $ctrl.distributeServices, 'current-tab': $ctrl.distributeServices, 'nav-bar-fade-on-hover': !$ctrl.distributeServices}"><a href="/distribute-services">Distribute Services</a></li>
-                <li data-ng-class="{'active': $ctrl.viewAssignments, 'current-tab': $ctrl.viewAssignments, 'nav-bar-fade-on-hover': !$ctrl.viewAssignments}"><a href="/view-assignments">View Assignments</a></li>
+                <li data-ng-class="{'active': $ctrl.viewAssignments, 'current-tab': $ctrl.viewAssignments, 'nav-bar-fade-on-hover': !$ctrl.viewAssignments}"><a href="/view-assignments">Fulfilled Requests</a></li>
                 <li data-ng-class="{'active': $ctrl.about, 'current-tab': $ctrl.about, 'nav-bar-fade-on-hover': !$ctrl.about}"><a href="/about">About</a></li>
 
                 <li id="sign_out" class="nav-bar-fade-on-hover" ng-click="$ctrl.signOut()" style="cursor: pointer"><a>Sign Out</a></li>
