--- a/help-me-out/app/view-assignments/view-assignments.template.html
+++ b/help-me-out/app/view-assignments/view-assignments.template.html
@@ -1,9 +1,24 @@
-
 <nav-bar></nav-bar>
 <div class="row">
     <div class="col-xs-12">
         <div class="container-fluid">
-            <h2>TODO: Create module 'View Assignments'</h2>
+            <div class="panel">
+                <div style="padding: 10px">
+                    <h2>Here you can view information about your fulfilled requests</h2>
+                </div>
+            </div>
+            <div ng-repeat="request in $ctrl.requestsArray">
+                <div class="panel">
+                    <div style="padding: 10px">
+                        <h3>Request for {{request.serviceName}}</h3>
+                        <h4>Made on {{request.requestTimeText}}</h4>
+                        <h4>Fulfilled on {{request.fulfilmentTimeText}}</h4>
+                        <h4>Original Priority: {{request.priority}}</h4>
+                        <h4>Distributor Contact Information: {{request.contactText}}</h4>
+                        <!--{{request}}-->
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
