--- a/help-me-out/app/about/about.template.html
+++ b/help-me-out/app/about/about.template.html
@@ -1,10 +1,13 @@
-
 <nav-bar></nav-bar>
 <div class="row">
     <div class="col-xs-12">
         <div class="container-fluid">
             <h2>About Help Me Out</h2>
-            <p>Help Me Out is an application that connects people with the services that they need, by distributing them based on priority</p>
+            <p>Help Me Out is an application that connects people with the services that they need, by sorting them
+                based on priority. The priority is calculated by taking into account both the time of the request and
+                the urgency of the request.</p>
+            <p>This relatively simple app was made for 'Midnight Madness' at HackGSU 2017</p>
+            <p>It was made within a time limit of 4 hours</p>
             <p>Created by Deb Banerji</p>
         </div>
     </div>
