--- a/help-me-out/app/index.html
+++ b/help-me-out/app/index.html
@@ -94,7 +94,7 @@
 <body>
 
 <div class="jumbotron heading" style="width: 100vw">
-    <h1 class="heading">Help Me Out</h1>
+    <h1 class="heading">Service Ninja</h1>
 </div>
 
 <div class="view-container">
