--- a/help-me-out/app/index.html
+++ b/help-me-out/app/index.html
@@ -4,11 +4,11 @@
     <link rel='shortcut icon' href='/assets/favicon.png' type='image/x-icon'/>
     <meta charset="utf-8">
     <base href="/">
-    <title>Help Me Out</title>
+    <title>Service Ninja</title>
     <!--<link rel="shortcut icon" type="image/png" href="assets/Favicon.png"/>-->
 
-    <meta property="og:title" content="Help Me Out"/>
-    <meta property="og:description" content="Help Me Out is an application that connects people with the services that they need, by distributing them based on priority"/>
+    <meta property="og:title" content="Service Ninja"/>
+    <meta property="og:description" content="Service Ninja is an application that connects people with the services that they need, by distributing them based on priority"/>
     <meta property="og:image" content="PREVIEW_IMAGE_URL"/>
 
     <!--JQuery-->
