Added fancy GP comment

--- a/help-me-out/app/about/about.template.html
+++ b/help-me-out/app/about/about.template.html
@@ -5,7 +5,7 @@
             <h2>About Service Ninja</h2>
             <p>Service Ninja is an application that connects people with the services that they need, by sorting them
                 based on priority. The priority is calculated by taking into account both the time of the request and
-                the urgency of the request.</p>
+                the urgency of the request using a geometric progression.</p>
             <p>This relatively simple app was made for 'Midnight Madness' at HackGSU 2017</p>
             <p>It was made within a time limit of 4 hours</p>
             <p>Created by Deb Banerji</p>
