Fixed small viewing glitch

--- a/help-me-out/app/distribute-services/distribute-services.template.html
+++ b/help-me-out/app/distribute-services/distribute-services.template.html
@@ -32,7 +32,7 @@
                             <div style="padding: 10px">
                                 <!--{{request}}-->
                                 <h4>Requester Name: {{request.requesterName}}</h4>
-                                <h4>Time of Request: {{request.dateTimeText}}</h4>
+                                <h4>Time of Request: {{request.requestTimeText}}</h4>
                                 <h4>Request Priority: {{request.priority}}</h4>
                                 <a class="btn btn-info"
                                    ng-click="$ctrl.fulfilRequest(service.name, request)">Fulfill
