Updated 'about' page

--- a/help-me-out/app/about/about.template.html
+++ b/help-me-out/app/about/about.template.html
@@ -6,7 +6,15 @@
             <p>Service Ninja is an application that connects people with the services that they need, by sorting them
                 based on priority. The priority is calculated by taking into account both the time of the request and
                 the urgency of the request using a geometric progression.</p>
-            <p>This relatively simple app was made for 'Midnight Madness' at HackGSU 2017</p>
+            <br>
+            <p>Each level of urgency adds to the time of the request a different offset before sorting
+            <p>Critical: 30 minutes</p>
+            <p>Very Urgent: 1 hour</p>
+            <p>Urgent: 2 hours</p>
+            <p>Important: 4 hours</p>
+            <p>Take Your Time: 8 hours</p>
+            <br>
+            <p>This app was made for 'Midnight Madness' at HackGSU 2017</p>
             <p>It was made within a time limit of 4 hours</p>
             <p>Created by Deb Banerji</p>
         </div>
