--- a/help-me-out/app/login/login.template.html
+++ b/help-me-out/app/login/login.template.html
@@ -10,8 +10,8 @@
                 <button class="btn btn-raised btn-success" ng-click="$ctrl.signIn()">
                     Sign in With Google
                 </button>
-                <h2>About Help Me Out</h2>
-            <p>Help Me Out is an application that connects people with the services that they need, by distributing them based on priority</p>
+                <h2>About Service Ninja</h2>
+            <p>Service Ninja is an application that connects people with the services that they need, by distributing them based on priority</p>
             <p>Created by Deb Banerji</p>
             </div>
         </div>
