--- a/help-me-out/app/index.html
+++ b/help-me-out/app/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en" data-ng-app="helpMeOutApp">
 <head>
-    <link rel='shortcut icon' href='/assets/favicon.png' type='image/x-icon'/>
+    <link rel='shortcut icon' href='./assets/favicon.ico' type='image/x-icon'/>
     <meta charset="utf-8">
     <base href="/">
     <title>Service Ninja</title>
